log/build_2024-07-25_10-24-39/py_proj/stderr.log
  File "/home/sunny/ros2_ws/install/py_proj/lib/python3.10/site-packages/py_proj/proj_coordinate.py", line 60
    print(len(self.raw_data)
         ^
SyntaxError: '(' was never closed

